--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#336699"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,47 +11,20 @@
 
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Insert"
         android:id="@+id/insertButton"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:onClick="insertPerson"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="Add new user" />
 
-    <EditText
-        android:layout_width="300dp"
-        android:hint="Type here you name"
-        android:layout_height="wrap_content"
-        android:id="@+id/nameText"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="27dp" />
-
-    <EditText
-        android:layout_width="300dp"
-        android:hint="Type here you surname"
-        android:layout_height="wrap_content"
-        android:id="@+id/surnameText"
-        android:layout_below="@+id/nameText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp" />
-
-    <EditText
-        android:layout_width="300dp"
-        android:hint="Type here you phone number"
-        android:layout_height="wrap_content"
-        android:id="@+id/phoneText"
-        android:layout_below="@+id/surnameText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Show All"
         android:id="@+id/showAllButton"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/insertButton"
         android:layout_centerHorizontal="true"
-        android:onClick="showAll"/>
+        android:onClick="showAll"
+        android:text="Show All users" />
 </RelativeLayout>
